--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 
-spring.datasource.url=jdbc:postgresql://44.235.77.38:5432/EMS
+spring.datasource.url=jdbc:postgresql://localhost:5432/EMS
 spring.datasource.username=postgres
 spring.datasource.password=Sahyadri@123
 spring.datasource.driver-class-name=org.postgresql.Driver
